--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "react-poc-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kamilgrybos.github.io/react-poc-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "deep-keys": "^0.5.0",
+    "gh-pages": "^3.1.0",
     "lodash": "^4.17.21",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
@@ -23,8 +25,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
