--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-poc-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gryboskamil.github.io/react-poc-app/",
+  "homepage": "https://gryboskamil.github.io/react-poc-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
