--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "deep-keys": "^0.5.0",
+    "flat": "^5.0.2",
     "gh-pages": "^3.1.0",
     "lodash": "^4.17.21",
     "node-sass": "^5.0.0",
