--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "vanilla-tilt": "^1.7.0",
     "web-vitals": "^1.1.1"
   },
+  "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.2.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
